# vibe-dashcam

./: .gitignore  LICENSE  README.md  requirements.txt
.codex/hooks/: vibe_dashcam_hook.py
.github/workflows/: test.yml
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: main.rs
examples/codex/: vibe_dashcam_hook.py
vibe_dashcam/: INSTALL_FOR_AGENT.md  README.md  test_vibe_dashcam.py  vibe_dashcam.py
