[package]
name = "vibe-dashcam"
version = "0.1.0"
description = "Local Skill/MCP token-waste dashcam"
authors = ["MUBIN"]
license = "MIT"
repository = "https://github.com/Munable/vibe-dashcam"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
